Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33748

Network status depends on having signal strength information

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Some future release
    • None

    Description

      Currently network status requires signal strength information being available before returning the network information. Some drivers (one on LG Nexus 4) don't populate this information, so information is never returned.

      I'm proposing a patch to not require signal strength, which seems to fix the issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            timojyrinki Timo Jyrinki
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes