Do not require signal strength information to return network status.

Do not require signal strength information to be available in order
to return network information. On some devices signal strength
is not available.

Task-number: QTBUG-33748

Change-Id: I1a6021483b9a2073595720a063f2de07ecdd98e1
Reviewed-by: Lorn Potter <lorn.potter@jollamobile.com>